# stage-quadmesh

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  annot_poly.cpp  axe_median.cpp  bords.cpp  chart.cpp  framefield.cpp  hello.cpp  iterate_primitives.cpp  iterate_primitives_conn.cpp  midpoint.cpp  midpointpoly.cpp  open_save_mesh.cpp  poly_aligne.cpp  poly_to_poly.cpp  poly_to_poly2.cpp  poly_to_quad.cpp  recentre.cpp  suppr_non_disque.cpp  tache_singu.cpp  tache_to_poly.cpp  tache_to_quad copy.cpp  tache_to_quad.cpp  tachepoly.cpp  tachepoly2.cpp  tachequad.cpp  taches.cpp  test.cpp
examples/assets/: B46sub.geogram  B72sub.geogram  charts.geogram  charts_to_polygon.geogram  cube_tri.geogram  cubesub.geogram  desktop.ini  joint_sub.geogram  joint_sub_sub.geogram  quarterdisk_tri.mesh  sortie.geogram  sortie_recentre.geogram  sphere.geogram  spherep.geogram  spheretri.geogram
